--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Over Weights</string>
     <string name="splashTitle">shape your body</string>
     <string name="splahTitile2">Boost your knowledge on the blog. Find your fit with wear and gear</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
